refactor(all): put `nalgebra` in workspace

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ license-file = "LICENSE"
 [workspace.dependencies]
 pyo3 = { version = "0.22", features = ["extension-module"] }
 numpy = "0.22"
+nalgebra = "0.33.2"
 
 collider = { path = "crates/collider" }
 shape = { path = "crates/shape" }
