--- a/crates/shape/Cargo.toml
+++ b/crates/shape/Cargo.toml
@@ -9,5 +9,5 @@ repository.workspace = true
 license-file.workspace = true
 
 [dependencies]
-nalgebra = "0.33.2"
+nalgebra = { workspace = true }
 pyo3 = { workspace = true }
