--- a/crates/shape/Cargo.toml
+++ b/crates/shape/Cargo.toml
@@ -11,3 +11,4 @@ license-file.workspace = true
 [dependencies]
 nalgebra = { workspace = true }
 pyo3 = { workspace = true }
+numpy = { workspace = true}
