chore: specify subcrates version

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,6 @@ pyo3 = { version = "0.24.1", features = ["extension-module"] }
 numpy = "0.24.0"
 nalgebra = "0.33.2"
 
-collider = { path = "crates/collider" }
-shape = { path = "crates/shape" }
-mesh = { path = "crates/mesh" }
+collider = { path = "crates/collider", version = "0.0.1" }
+shape = { path = "crates/shape", version = "0.0.1" }
+mesh = { path = "crates/mesh", version = "0.0.1" }
