--- a/crates/collider-mesh/Cargo.toml
+++ b/crates/collider-mesh/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "shape"
+name = "collider-mesh"
 version.workspace = true
 edition.workspace = true
 authors.workspace = true
@@ -12,3 +12,5 @@ license-file.workspace = true
 nalgebra = { workspace = true }
 pyo3 = { workspace = true }
 numpy = { workspace = true}
+
+collider-shape = { workspace = true }
