--- a/crates/collider-mesh/Cargo.toml
+++ b/crates/collider-mesh/Cargo.toml
@@ -9,8 +9,8 @@ repository.workspace = true
 license-file.workspace = true
 
 [dependencies]
-nalgebra = { workspace = true }
-pyo3 = { workspace = true }
+nalgebra.workspace = true
+pyo3.workspace = true
 numpy = { workspace = true}
 
-collider-shape = { workspace = true }
+collider-shape.workspace = true
