--- a/crates/collider-rs/Cargo.toml
+++ b/crates/collider-rs/Cargo.toml
@@ -10,4 +10,4 @@ license-file.workspace = true
 
 [dependencies]
 collider-shape = { workspace = true}
-collider-mesh = { workspace = true }
+collider-mesh.workspace = true
