--- a/crates/collider-shape/Cargo.toml
+++ b/crates/collider-shape/Cargo.toml
@@ -9,6 +9,6 @@ repository.workspace = true
 license-file.workspace = true
 
 [dependencies]
-nalgebra = { workspace = true }
-pyo3 = { workspace = true }
+nalgebra.workspace = true
+pyo3.workspace = true
 numpy = { workspace = true}
