refactor(shape): various cleanups

--- a/crates/collider-rs/Cargo.toml
+++ b/crates/collider-rs/Cargo.toml
@@ -9,5 +9,5 @@ repository.workspace = true
 license-file.workspace = true
 
 [dependencies]
-collider-shape = { workspace = true}
+collider-shape.workspace = true
 collider-mesh.workspace = true
