--- a/crates/collider-query/Cargo.toml
+++ b/crates/collider-query/Cargo.toml
@@ -6,6 +6,7 @@ authors.workspace = true
 readme.workspace = true
 description.workspace = true
 repository.workspace = true
+homepage.workspace = true
 license-file.workspace = true
 
 [dependencies]
