chore: link to `collider-py` license and readme

--- a/collider-py/Cargo.toml
+++ b/collider-py/Cargo.toml
@@ -3,11 +3,11 @@ name = "collider-py"
 version.workspace = true
 edition.workspace = true
 authors.workspace = true
-readme.workspace = true
+readme = "README.md"
 description.workspace = true
 repository.workspace = true
 homepage.workspace = true
-license-file.workspace = true
+license-file = "LICENSE"
 
 [lib]
 name = "collider"
