refactor: create python crate features

--- a/collider-py/Cargo.toml
+++ b/collider-py/Cargo.toml
@@ -16,4 +16,4 @@ doc = false
 
 [dependencies]
 pyo3.workspace = true
-collider-rs.workspace = true
+collider-rs = { workspace = true, features = ["python"] }
